# ncis-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt~  README.md  idea i guess.org
shaders/: basic.vert  unshade.frag
src/: main.c  main.cpp  main.cpp~
src/include/: fileworks.h  rendering.h  shader.h  windowing.h
